test/good/nullables/op03.px

Bool? x = true
print x?.toString()
x = null
print x?.toString()
