test/bad/nullables/op03.px

Bool b = false
b?.toString()
